# analyze2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blacklion/: __init__.py  __main__.py  runtime.py
blacklion/ai/: __init__.py  model.py  stats.py
blacklion/backtest/: __init__.py  engine.py  metrics.py  run.py
blacklion/core/: config.py  events.py  logging.py
blacklion/data/: indicators.py  models.py  news.py  normalizer.py  sources.py  validation.py
blacklion/engines/: manipulation.py  mtf.py  pipeline.py  volume_profile.py
blacklion/engines/fvg/: __init__.py  service.py
blacklion/engines/ict/: __init__.py  service.py
blacklion/engines/liquidity/: __init__.py  service.py
blacklion/engines/market_structure/: __init__.py  service.py
blacklion/engines/order_block/: __init__.py  service.py
blacklion/engines/rule_engine/: __init__.py  service.py
blacklion/engines/strategies/: __init__.py  base.py  candles.py  ict_models.py  regime.py  registry.py  scorecard.py  setup_a.py  setup_b.py
blacklion/execution/: __init__.py  broker.py  engine.py  paper.py
blacklion/execution/mt5/: __init__.py  bridge.py
blacklion/features/: engineer.py
blacklion/journal/: __init__.py  store.py
blacklion/monitoring/: __init__.py  health.py
blacklion/risk/: __init__.py  engine.py
blacklion/telegram/: __init__.py  chart.py  client.py  format.py  notifier.py  report.py
configs/: engines.yaml  news.yaml  risk.yaml  sessions.yaml  strategies.yaml  symbols.yaml
docker/: mt5-start.sh
docs/: DEPLOY.md  ROADMAP.md
docs/strategies/: README.md  candlestick-patterns.md  price-action.md  risk-rules.md  strategy.md
docs/titan/: TITAN_BIBLE.docx  TITAN_BIBLE.txt
tests/: conftest.py  helpers.py  test_ai.py  test_backtest.py  test_chart.py  test_data_feed.py  test_execution.py  test_features.py  test_fvg.py  test_ict.py  test_journal.py  test_liquidity.py  test_manipulation.py  test_market_structure.py  test_monitoring.py  test_mtf.py  test_news.py  test_normalizer.py  test_order_block.py  test_risk.py  test_rule_engine.py  test_runtime.py  test_strategies.py  test_telegram.py  test_validation.py  test_volume_profile.py
