[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blacklion"
version = "0.1.0"
description = "BLACK LION AI — risk-first AI-assisted trading platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "redis>=5.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
mt5 = ["rpyc>=6.0"]

[tool.setuptools.packages.find]
include = ["blacklion*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
