[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blacklion"
version = "0.1.0"
description = "BLACK LION AI — risk-first AI-assisted trading platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "yfinance>=0.2.50",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]
# mt5linux 0.1.9's own requirements.txt is a frozen pip-freeze (twine, keyring,
# numpy==1.21.4 …) that can't co-resolve with our stack, so it's installed
# --no-deps in the Dockerfile. Here we only declare its real runtime need: rpyc
# (client uses rpyc.classic; kept on 5.x to match the Wine server's rpyc 5.2.3).
mt5 = ["rpyc>=5,<6"]
# Postgres/Timescale + Redis wiring (v2; v1 dry-run uses SQLite + in-process bus)
infra = ["redis>=5.0", "SQLAlchemy>=2.0", "psycopg2-binary>=2.9", "alembic>=1.13"]

[tool.setuptools.packages.find]
include = ["blacklion*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
